--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="container">
             <div class="even first">
-                <img width="100%" src="/images/image-product-desktop.jpg" alt="perfume">
+                <img width="100" src="/images/image-product-desktop.jpg" alt="perfume">
             </div>
             <div class="even second">
                 <p class="title">PERFUME</p>
